@startuml

title __ATTENDANCE's Class Diagram__\n

  namespace com.example.Attendance {
    class com.example.Attendance.AttendanceApplication {
    }
  }


  namespace com.example.Attendance {
    namespace Configuration {
      class com.example.Attendance.Configuration.WebConfiguration {
      }
    }
  }


  namespace com.example.Attendance {
    namespace Controller {
      class com.example.Attendance.Controller.VisitorController {
      }
    }
  }


  namespace com.example.Attendance {
    namespace Model {
      class com.example.Attendance.Model.Visitor {
      }
    }
  }


  namespace com.example.Attendance {
    namespace Repository {
      interface com.example.Attendance.Repository.VisitorRepository {
      }
    }
  }


  namespace com.example.Attendance {
    namespace Service {
      class com.example.Attendance.Service.VisitorService {
      }
    }
  }


  com.example.Attendance.Configuration.WebConfiguration .up.|> org.springframework.web.servlet.config.annotation.WebMvcConfigurer
  com.example.Attendance.Controller.VisitorController o-- com.example.Attendance.Service.VisitorService : visitorService
  com.example.Attendance.Service.VisitorService o-- com.example.Attendance.Repository.VisitorRepository : visitorRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
